atividade-1/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exposer-service
  namespace: labnginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30038
