atividade-1/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: labnginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: nginx-exposer-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginx-exposer-service
                port:
                  number: 80
            path: /
            pathType: Prefix
